fixed header vertical alignment

--- a/apps/web-store-angular/src/app/app.component.css
+++ b/apps/web-store-angular/src/app/app.component.css
@@ -4,12 +4,13 @@
     z-index: 10;
     background: #b7dce6;
     border-bottom: 1px solid #eee;
-    height: 70px;
+    height: 64px;
+    align-items: center;
 }
 
 .topbar__inner{
-    height: 100%;
-    padding: 14px 18px;
+    
+    padding: 10px 18px;
     display: flex;
     align-items: center;
     justify-content: space-between;
